--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "STOMP server implementation for RadioVis",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "standard && mocha"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,12 @@
   "bugs": {
     "url": "https://github.com/bbc/node-radiovis-stomp-server/issues"
   },
-  "homepage": "https://github.com/bbc/node-radiovis-stomp-server#readme"
+  "homepage": "https://github.com/bbc/node-radiovis-stomp-server#readme",
+  "devDependencies": {
+    "standard": "*",
+    "mocha": "*"
+  },
+  "standard": {
+    "env": [ "mocha" ]
+  }
 }
