--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node ./bin/radiovis-stomp-server",
     "test": "standard && mocha",
+    "coverage": "istanbul cover _mocha",
     "spec": "speculate"
   },
   "repository": {
@@ -28,7 +29,8 @@
   },
   "devDependencies": {
     "standard": "*",
-    "mocha": "*",
+    "mocha": "^3.2.0",
+    "istanbul": "^0.4.5",
     "speculate": "*"
   },
   "standard": {
