--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/bbc/node-radiovis-stomp-server#readme",
   "dependencies": {
     "express": "^4.15.2",
+    "ejs": "^2.5.6",
     "uuid": "~3.0.1"
   },
   "devDependencies": {
