--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
   },
   "homepage": "https://github.com/bbc/node-radiovis-stomp-server#readme",
   "dependencies": {
+    "body-parser": "^1.17.1",
+    "ejs": "^2.5.6",
     "express": "^4.15.2",
     "moment": "^2.18.1",
-    "ejs": "^2.5.6",
     "uuid": "~3.0.1"
   },
   "devDependencies": {
