--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "mocha": "^3.2.0",
     "sinon": "^2.1.0",
     "speculate": ">=1.7.0",
-    "standard": "*"
+    "standard": "^9.0.0"
   },
   "standard": {
     "env": [
