--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
   },
   "homepage": "https://github.com/bbc/node-radiovis-stomp-server#readme",
   "dependencies": {
-    "body-parser": "^1.17.1",
-    "ejs": "^2.5.6",
-    "express": "^4.15.2",
-    "moment": "^2.18.1",
-    "uuid": "~3.0.1"
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "moment": "^2.22.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
-    "sinon": "^2.1.0",
+    "mocha": "^5.2.0",
+    "sinon": "^6.3.5",
     "standard": "^9.0.0"
   },
   "standard": {
