--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "url": "https://github.com/bbc/node-radiovis-stomp-server/issues"
   },
   "homepage": "https://github.com/bbc/node-radiovis-stomp-server#readme",
+  "engines": {
+    "node": "^10.0.0"
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
