--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node ./bin/radiovis-stomp-server",
     "test": "mocha && standard",
-    "coverage": "istanbul cover _mocha",
+    "coverage": "nyc --reporter=html --reporter=text mocha",
     "spec": "speculate"
   },
   "repository": {
@@ -35,9 +35,9 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "sinon": "^6.3.5",
+    "nyc": "^14.1.1",
     "standard": "^12.0.1"
   },
   "standard": {
