Moved mocha options to package.json (the file mocha.opts was deprecated)

--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "sinon": "^9.2.4",
     "standard": "^16.0.3"
   },
+  "mocha": {
+    "recursive": true
+  },
   "standard": {
     "env": [
       "mocha"
