Fixed error on package.json npm WARN publish errors corrected: npm WARN publish "bin" was converted to an object npm WARN publish "bin[radiovis-stomp-server]" script name was cleaned

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.5",
   "description": "STOMP server implementation for RadioVis",
   "main": "./lib/radiovis-server.js",
-  "bin": "./bin/radiovis-stomp-server",
+  "bin": {
+    "radiovis-stomp-server": "bin/radiovis-stomp-server"
+  },
   "scripts": {
     "start": "node ./bin/radiovis-stomp-server",
     "test": "mocha && standard",
